force-app/main/default/objects/Purchase_Order_Invoice__c/Purchase_Order_Invoice__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Salesforce Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>