force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <label>Base Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>