force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Buy_From_GST_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Buy_From_GST_Registration_No__c</fullName>
    <label>Buy-From GST Registration No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>