force-app/main/default/objects/Purchase_Order_Invoice__c/fields/GST_Jurisdiction_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Jurisdiction_Type__c</fullName>
    <label>GST Jurisdiction Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>