force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>SRN Generated</fullName>
            </value>
            <value>
                <fullName>GRN Generated</fullName>
            </value>
            <value>
                <fullName>UTR Generated</fullName>
            </value>
            <value>
                <fullName>Invoice Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>