force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Outstanding_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Quantity__c</fullName>
    <formula>Purchase_Order_Line__r.Outstanding_Quantity__c  -  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>