force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Purchase Order Invoices</relationshipLabel>
    <relationshipName>Purchase_Order_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>