force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRN Generated</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>SRN Generated</fullName>
            </value>
            <value>
                <fullName>UTR Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>