force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocation Account</fullName>
            </value>
            <value>
                <fullName>Charge (Item)</fullName>
            </value>
            <value>
                <fullName>comment</fullName>
            </value>
            <value>
                <fullName>Fixed Asset</fullName>
            </value>
            <value>
                <fullName>G/L Account</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>