force-app/main/default/objects/Purchase_Order_Invoice__c/fields/UTR__c.field-meta.xml
<CustomField>
    <fullName>UTR__c</fullName>
    <externalId>true</externalId>
    <label>UTR</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>