force-app/main/default/objects/Purchase_Order_Invoice__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Invoices</relationshipLabel>
    <relationshipName>Purchase_Order_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>