force-app/main/default/objects/Purchase_Order_Invoice__c/validationRules/Base_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Amount__c &gt;  PO_Amount__c</errorConditionFormula>
    <errorMessage>Base amount should be not more than PO amount</errorMessage>
</ValidationRule>