force-app/main/default/objects/Purchase_Order_Invoice__c/validationRules/Check_Invoice_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Invoice_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Purchase_Order__r.Order_Date__c &gt;  Invoice_Date__c</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Invoice Date should be later than the Purchase Order&apos;s Order Date.</errorMessage>
</ValidationRule>