force-app/main/default/objects/Purchase_Order_Invoice__c/validationRules/Invoice_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &gt; Purchase_Order_Line__r.Quantity__c</errorConditionFormula>
    <errorMessage>Invoice Quantity cannot exceed the Purchase Order Line Quantity.</errorMessage>
</ValidationRule>