force-app/main/default/objects/Purchase_Order_Invoice__c/validationRules/PO_Line_Outstanding_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Line_Outstanding_Quantity_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Purchase_Order_Line__r.Outstanding_Quantity__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>PO Line Outstanding Quantity is not 0</errorMessage>
</ValidationRule>