force-app/main/default/objects/Purchase_Order_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PO_Amount__c</columns>
    <columns>Document_No__c</columns>
    <columns>Expected_Receipt_Date__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Quantity__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>